added new loading gif

--- a/assignments/JS/KNIGHT/index.html
+++ b/assignments/JS/KNIGHT/index.html
@@ -40,13 +40,13 @@
         <div class="col border border-black d-inline-block "></div>
     </section>
     <section class="row w-75 m-auto justify-content-center my-4" style="height: 4vw">
-        <div class="col-1 px-1 mx-2 py-2 d-flex align-items-center">
-            <button id="btnStart" class="btn bg-primary w-100 rounded-3 text-white border-0" style="height: 90%" >Start</button>
+        <div class="col-7 col-sm-5 col-lg-1 px-1 mx-2 py-2 d-flex align-items-center">
+            <button id="btnStart" class="btn bg-primary w-100 rounded-3 text-white border-0 text-center" style="height: 90%" >Start</button>
         </div>
-        <div class="col-1 px-1 mx-2 py-2 d-flex align-items-center">
-            <button id="btnStop" class="btn bg-danger w-100 rounded-3 text-white border-0" style="height: 90%" >Stop</button>
+        <div class="col-7 col-sm-5 col-lg-1 px-1 mx-2 py-2 d-flex align-items-center">
+            <button id="btnStop" class="btn bg-danger w-100 rounded-3 text-white border-0 text-center" style="height: 90%" >Stop</button>
         </div>
-        <div class="col-4 py-2 ">
+        <div class="col-7 col-lg-4 py-2 ">
             <input type="range" class="form-range bg-white px-4 rounded-3" id="range"  min="30" max="70" value="50" step="1" style="height: 100%">
         </div>
     </section>
