calculator bugs fixed

--- a/assignments/JS/CAL/index.html
+++ b/assignments/JS/CAL/index.html
@@ -304,7 +304,12 @@
         midCalculations(display.value);
     });
     btnEqual.addEventListener("click",function(){
-        selectOperator(display.value);
+        if(display.value==""){
+            selectOperator(0);
+        }else{
+            selectOperator(display.value);
+        }
+
         if(isNaN(number)){
             display.value="Invalid"
             number=0;
